fix: firefox double scroll bar

--- a/Projekt/client/src/app/shell/navigation/navigation.component.scss
+++ b/Projekt/client/src/app/shell/navigation/navigation.component.scss
@@ -20,7 +20,6 @@
             display: flex;
             flex: 1 1;
             justify-content: stretch;
-            flex-direction: column;
         }
         .main-navigation {
             @include mat-elevation(2);
